# frantic

./: .gitignore  LICENSE  README.md  base.html  cov.xml  exceptions.html  frantic.html  index.html  pyproject.toml  version.html
.github/workflows/: pages.yaml
frantic/: __init__.py  base.py  exceptions.py  frantic.py  version.py
